# polyommatus_classification

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
notebooks/: polyommatus_gradcam.ipynb
src/: eval_cls.py  metadata.py  train_cls.py  utils.py
src/dataset/: dataset.py  samplers.py  transform.py
src/model/: classifier.py
