[project]
name = "polyommatus-classification"
version = "0.0.0"
description = ""
authors = [
    {name = "Alexander Popkov",email = "alr.popkov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "pytorch-ignite (>=0.5.2,<0.6.0)",
    "torchextractor (>=0.3.0,<0.4.0)",
    "torchsummary (>=1.5.1,<2.0.0)",
    "onnx (>=1.18.0,<2.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "opencv-contrib-python (>=4.11.0.86,<5.0.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "neptune (>=1.14.0,<2.0.0)",
    "pybioclip (>=1.3.3,<2.0.0)",
    "albumentations (==2.0.8)",
    "jupyter (>=1.1.1,<2.0.0)",
    "grad-cam (>=1.5.5,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
